--- a/src/styles/sass/about.scss
+++ b/src/styles/sass/about.scss
@@ -35,6 +35,7 @@ $default-font-size: 1.6rem;
     display: flex;
     justify-content: space-evenly;
     max-width: 115rem;
+    margin: 0 auto;
     & aside {
       position: relative;
       @media only screen and (max-width: 750px) {
