--- a/src/styles/sass/header.scss
+++ b/src/styles/sass/header.scss
@@ -32,9 +32,7 @@ $default-font-size: 1.6rem;
   justify-content: center;
   z-index: 2;
   position: relative;
-  @media only screen and (max-width: 730px) {
-    display: none;
-  }
+
   nav {
     max-width: 115rem;
     width: 100%;
@@ -55,9 +53,13 @@ $default-font-size: 1.6rem;
     font-size: 1.8rem;
     @media only screen and (max-width: 800px) {
       flex-basis: 80%;
+      display: none;
     }
     &--contact {
       transition: all 0.3s;
+      @media only screen and (max-width: 800px) {
+        margin-top: 4rem;
+      }
       & a {
         background-color: $color-primary-brown;
         color: $color-primary-white;
@@ -68,5 +70,38 @@ $default-font-size: 1.6rem;
         transform: translateY(-1rem);
       }
     }
+  }
+}
+
+.mobile-nav {
+  display: none;
+  &__container {
+    height: 100%;
+    background-color: $color-primary-white;
+  }
+  @media only screen and (max-width: 800px) {
+    display: block;
+    position: absolute;
+    height: 28rem;
+    background-color: $color-primary-white;
+    left: 0;
+    right: 0;
+    width: 100%;
+
+    margin-top: 6rem;
+
+    transition: all 0.5s;
+    padding: 0 6rem 0 6rem;
+
+    & li {
+      margin-bottom: 1rem;
+    }
+  }
+}
+.menu {
+  display: none;
+  @media only screen and (max-width: 800px) {
+    font-size: 3rem;
+    display: block;
   }
 }
