--- a/src/styles/sass/values.scss
+++ b/src/styles/sass/values.scss
@@ -63,6 +63,7 @@ $default-font-size: 1.6rem;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 15rem;
+    margin-bottom: 10rem;
     @media only screen and (max-width: 850px) {
       flex-direction: column;
       align-items: center;
